--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,33 +1,63 @@
 <div class="modal-background lg:fixed lg:inset-0 lg:bg-black lg:bg-opacity-50 flex justify-center items-center" *ngIf="showModal">
   <div class="modal-content p-4 bg-white rounded-lg w-full lg:w-auto max-w-4xl">
     <h2 class="text-lg font-bold mb-4">Edit Task</h2>
-      <div class="flex flex-col w-full lg:w-1/3">
+      <div class="flex flex-col">
         <label class="label">
           <span class="label-text mt-4">Title</span>
         </label>
         <input
           type="text" [ngModel]="task?.title" (ngModelChange)="task && (task.title = $event)"
-          class="input input-bordered w-full"
+          class="input input-bordered"
           placeholder="Title">
 
         <label class="label">
-          <span class="label-text mt-4">Description</span>
+          <span class="label-text lg:mt-4 mt-2">Description</span>
         </label>
         <textarea
           [ngModel]="task?.description" (ngModelChange)="task && (task.description = $event)"
-          class="textarea textarea-bordered h-24 w-full"
+          class="textarea textarea-bordered h-24"
           placeholder="Description">
         </textarea>
-      <div class="flex flex-col w-full lg:w-1/3">
-        <label class="label">
-          <span class="label-text mt-4">Status</span>
-        </label>
-        <select [ngModel]="task?.status" (ngModelChange)="task && (task.status = $event)" class="select w-full mt-4">
-          <option *ngFor="let status of statuses" [ngValue]="status">{{ status }}</option>
-        </select>
       </div>
-    </div>
-    <div class="flex lg:flex-row flex-col justify-between items-center mt-4">
+      <div class="flex lg:flex-row flex-col flex-wrap gap-4">
+        <div class="flex flex-col">
+          <label class="label">
+            <span class="label-text lg:mt-4 mt-2">Status</span>
+          </label>
+          <select [ngModel]="task?.status" (ngModelChange)="onStatusChange($event)" class="select w-full">
+            <option *ngFor="let status of statuses" [ngValue]="status">{{ status }}</option>
+          </select>
+        </div>
+
+        <div class="flex flex-col">
+          <label class="label">
+            <span class="label-text lg:mt-4 mt-2">Priority</span>
+          </label>
+          <select [ngModel]="task?.priority" (ngModelChange)="onPriorityChange($event)" class="select w-full">
+            <option *ngFor="let priority of priorities" [ngValue]="priority">{{ priority }}</option>
+          </select>
+        </div>
+
+        <div class="flex flex-col">
+          <label class="label">
+            <span class="label-text lg:mt-4 mt-2">Efforts</span>
+          </label>
+          <select [ngModel]="task?.effort" (ngModelChange)="onEffortChange($event)" class="select w-full">
+            <option *ngFor="let effort of efforts" [ngValue]="effort">{{ effort }}</option>
+          </select>
+        </div>
+        <div class="flex flex-col">
+          <label class="label">
+            <span class="label-text lg:mt-4 mt-2">Due Date</span>
+          </label>
+          <input
+            type="date"
+            [ngModel]="task?.dueDate | date: 'yyyy-MM-dd'" (ngModelChange)="onDueDateChange($event)"
+            class="input input-bordered"
+            placeholder="Due Date">
+        </div>
+      </div>
+    <div class="flex flex-row justify-between items-center mt-4">
       <button (click)="saveChanges()" class="btn btn-outline btn-info rounded mt-4">Save Changes</button>
       <button (click)="closeModal()" class="btn btn-outline btn-error rounded mt-4">Close</button>
     </div>
