--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container lg:mx-auto flex justify-between items-center lg:flex-row flex-col">
 
     <div class="flex items-center ">
-      <a [routerLink]="['/home']" class="text-2xl lg:text-4xl text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-pink-950 font-bold">
+      <a class="text-2xl lg:text-4xl text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-pink-950 font-bold">
         {{title}}</a>
     </div>
 
@@ -12,14 +12,15 @@
           <div class="relative">
             <input
               type="text"
-              placeholder="Search..."
+              placeholder="Search by title, description, assignee, category…"
               [(ngModel)]="searchTerm"
-              class="w-40 pl-8 p-2 mx-2 bg-gray-100 lg:w-96 text-xs lg:text-base lg:mx-4 lg:px-8 lg:py-2 lg:rounded-2xl lg:border lg:border-gray-300 lg:focus:outline-none lg:focus:ring-2
+              class="w-40 pl-8 p-2 mx-2 bg-gray-100 lg:w-96 text-dark text-xs lg:text-base lg:mx-4 lg:px-8 lg:py-2 lg:rounded-2xl lg:border lg:border-gray-300 lg:focus:outline-none lg:focus:ring-2
                    lg:focus:ring-red-300 lg:focus:border-transparent
               rounded-2xl border border-gray-300 focus:outline-none focus:ring-2
                    focus:ring-red-300 focus:border-transparent"
               (focus)="onFocus()"
               (blur)="onBlur()"
+              (ngModelChange)="onSearchTermChange()"
             >
 
             <div class="absolute top-0 flex items-center h-full mx-4">
