--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,6 +1,10 @@
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 p-4">
-  <div *ngFor="let task of tasks" (click)="openTaskDetails(task)" class="container border p-4 rounded-2xl hover:shadow-md transition-shadow cursor-pointer">
-
+  <div
+    *ngFor="let task of filteredTasks"
+    (click)="openTaskDetails(task)"
+    class="container border p-4 rounded-2xl hover:shadow-md transition-shadow cursor-pointer"
+    [ngClass]="{'text-green-500': isTaskCompleted(task)}"
+  >
     <div class="flex flex-row justify-between">
       <h3 class="lg:text-lg text-base font-bold">{{ task.title }}</h3>
       <div class="flex flex-row items-center gap-4">
@@ -9,13 +13,14 @@
           <path fill-rule="evenodd" d="M14.293 3.293a1 1 0 00-1.414 0l-9 9a1 1 0 00-.24.465l-1 4a1 1 0 001.213 1.214l4-1a1 1 0 00.465-.24l9-9a1 1 0 000-1.414l-2-2zM5.5 15.086l.586-2.344 1.758 1.758-2.344.586zm9.414-9.414l-1-1L13 5l1 1-1.586 1.586-1-1L11 6l1.586-1.586zM6.414 13.086l-1.758-1.758 9-9 1.758 1.758-9 9z" clip-rule="evenodd" />
         </svg>
       </div>
-        <div class="border rounded-full p-2">
+        <div class="border rounded-full p-2" (click)="markTaskAsCompleted($event, task)">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-auto cursor-pointer text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7"/>
         </svg>
         </div>
         <div class="border rounded-full p-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-auto cursor-pointer text-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-auto cursor-pointer text-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+             (click)="openConfirmDelete(task, $event)">
           <path stroke-linecap="round" stroke-linejoin="round" d="M11 17l4 4m0 0l-4-4m4 4V5a2 2 0 00-2-2h-4a2 2 0 00-2 2v11m4 4H5a2 2 0 01-2-2V5a2 2 0 012-2h4a2 2 0 012 2v11m0 0l4-4"/>
         </svg>
         </div>
@@ -97,4 +102,12 @@
     *ngIf="showTaskDetails"
     (closeTaskDetailsEvent)="closeTaskDetails()">
   </app-task-detail>
+  <app-confirm-delete
+    [taskId]="selectedTaskForDeletion"
+    [showConfirmDelete]="showConfirmDelete"
+    (closeConfirmDeleteEvent)="closeConfirmDelete()"
+    (confirmDeleteEvent)="onConfirmDelete($event)"
+    *ngIf="showConfirmDelete">
+  </app-confirm-delete>
+
 </div>
