--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,7 +34,7 @@
 
       <div class="flex items-center">
         <div class="ml-4 bg-green-300 rounded-2xl p-2">
-          <button class="flex items-center text-gray-600 focus:outline-none">
+          <button class="flex items-center text-gray-600 focus:outline-none" (click)="openCreateTask()">
             <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none">
               <path d="M12 4V20M20 12L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
             </svg>
@@ -44,4 +44,10 @@
       </div>
     </div>
   </div>
+  <app-create-task
+    *ngIf="showCreateTask"
+    [showCreateTask]="showCreateTask"
+    (closeCreateTaskEvent)="closeCreateTask()"
+    (createTaskEvent)="onCreateTask($event)">
+  </app-create-task>
 </header>
